--- a/src/main/resources/view/payment_form.fxml
+++ b/src/main/resources/view/payment_form.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import java.lang.String?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,37 +14,37 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.PaymentFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.PaymentFormController">
    <children>
-      <Label layoutX="422.0" layoutY="29.0" text="Payment">
+      <Label layoutX="14.0" layoutY="25.0" text="Payment">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Text layoutX="150.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY ID">
+      <Text layoutX="150.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY ID">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtPayId" layoutX="150.0" layoutY="141.0" onAction="#txtSearchOnAction" prefHeight="29.0" prefWidth="223.0" />
-      <Text layoutX="616.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount">
+      <TextField fx:id="txtPayId" layoutX="150.0" layoutY="178.0" onAction="#txtSearchOnAction" onKeyReleased="#txtPayIdOnKeyReleased" prefHeight="29.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="487.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtAmount" layoutX="616.0" layoutY="141.0" prefHeight="29.0" prefWidth="223.0" />
-      <Text layoutX="150.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
+      <TextField fx:id="txtAmount" layoutX="486.0" layoutY="178.0" onKeyReleased="#txtAmountOnKeyReleased" prefHeight="29.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="150.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtDate" layoutX="150.0" layoutY="214.0" prefHeight="29.0" prefWidth="223.0" />
-      <Text layoutX="616.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type">
+      <TextField fx:id="txtDate" layoutX="150.0" layoutY="311.0" prefHeight="29.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="486.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TableView fx:id="tblPayment" layoutX="93.0" layoutY="419.0" prefHeight="246.0" prefWidth="838.0">
+      <TableView fx:id="tblPayment" layoutX="736.0" layoutY="77.0" onMouseClicked="#tblPayOnMouse" prefHeight="723.0" prefWidth="838.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colPayId" prefWidth="116.0" text="PAY ID" />
           <TableColumn fx:id="colAmount" prefWidth="193.0" text="Amount" />
@@ -51,8 +52,15 @@
             <TableColumn fx:id="colType" prefWidth="193.0" text="Type" />
             <TableColumn fx:id="colOrd" prefWidth="138.0" text="ORD ID" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
-      <JFXButton buttonType="RAISED" layoutX="777.0" layoutY="348.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <JFXButton buttonType="RAISED" layoutX="467.0" layoutY="768.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -64,7 +72,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="669.0" layoutY="348.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="359.0" layoutY="768.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -76,7 +84,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="561.0" layoutY="348.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="251.0" layoutY="768.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -88,7 +96,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="450.0" layoutY="348.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="140.0" layoutY="768.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -100,12 +108,12 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <ChoiceBox fx:id="choiceType" layoutX="616.0" layoutY="214.0" onDragDetected="#choiceTypeOnAction" prefHeight="29.0" prefWidth="223.0" />
-      <Text layoutX="460.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORD ID">
+      <ChoiceBox fx:id="choiceType" layoutX="486.0" layoutY="311.0" onDragDetected="#choiceTypeOnAction" prefHeight="29.0" prefWidth="223.0" />
+      <Text layoutX="222.0" layoutY="435.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORD ID">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <JFXComboBox fx:id="comOrd" layoutX="387.0" layoutY="269.0" prefHeight="29.0" prefWidth="223.0" />
+      <JFXComboBox fx:id="comOrd" layoutX="149.0" layoutY="438.0" prefHeight="29.0" prefWidth="223.0" />
    </children>
 </AnchorPane>
