--- a/src/main/resources/view/batchEmployeeDetail_form.fxml
+++ b/src/main/resources/view/batchEmployeeDetail_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,33 +12,39 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchEmployeeDetailFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchEmployeeDetailFormController">
    <children>
-      <Label layoutX="336.0" layoutY="20.0" text="Batch Employee Details">
+      <Label layoutX="21.0" layoutY="31.0" text="Batch Employee Details">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Text layoutX="211.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="54.7294921875">
+      <Text layoutX="95.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="54.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtBatId" layoutX="211.0" layoutY="148.0" onAction="#txtSearchOnAction" prefHeight="25.0" prefWidth="200.0" />
-      <Text layoutX="614.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EMP ID" wrappingWidth="54.7294921875">
+      <TextField fx:id="txtBatId" layoutX="95.0" layoutY="162.0" onAction="#txtSearchOnAction" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="94.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EMP ID" wrappingWidth="54.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtEMPId" layoutX="614.0" layoutY="148.0" prefHeight="25.0" prefWidth="200.0" />
-      <TableView fx:id="tblBatEmp" layoutX="224.0" layoutY="360.0" prefHeight="263.0" prefWidth="571.0">
+      <TextField fx:id="txtEMPId" layoutX="94.0" layoutY="268.0" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px  0px 2px 0px; -fx-text-fill: black;" />
+      <TableView fx:id="tblBatEmp" layoutX="830.0" layoutY="70.0" onMouseClicked="#tblBatEmpOnMouse" prefHeight="699.0" prefWidth="660.0" stylesheets="@../css/BatchIngre.css">
         <columns>
-          <TableColumn fx:id="colBatId" prefWidth="287.0" text="BAT ID" />
-          <TableColumn fx:id="colEmpId" prefWidth="283.0" text="EMP ID" />
+          <TableColumn fx:id="colBatId" prefWidth="329.0" text="BAT ID" />
+          <TableColumn fx:id="colEmpId" prefWidth="328.0" text="EMP ID" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
-      <JFXButton buttonType="RAISED" layoutX="836.0" layoutY="245.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <JFXButton buttonType="RAISED" layoutX="396.0" layoutY="745.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -49,7 +56,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="731.0" layoutY="245.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="291.0" layoutY="745.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -61,7 +68,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="626.0" layoutY="245.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="186.0" layoutY="745.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -73,7 +80,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="521.0" layoutY="245.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5 #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="81.0" layoutY="745.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
