--- a/src/main/resources/view/batchIngredientDetail_form.fxml
+++ b/src/main/resources/view/batchIngredientDetail_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,32 +12,32 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchIngredientDetailFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchIngredientDetailFormController">
    <children>
-      <Label layoutX="358.0" layoutY="25.0" text="Batch Ingredient Details">
+      <Label layoutX="14.0" layoutY="28.0" text="Batch Ingredient Details">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <Text layoutX="211.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID">
+      <Text layoutX="101.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtBatId" layoutX="211.0" layoutY="139.0" onAction="#txtSearchOnAction" prefHeight="24.0" prefWidth="208.0" />
-      <Text layoutX="609.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty">
+      <TextField fx:id="txtBatId" layoutX="98.0" layoutY="140.0" onAction="#txtSearchOnAction" prefHeight="26.0" prefWidth="208.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="99.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtQty" layoutX="608.0" layoutY="139.0" prefHeight="24.0" prefWidth="208.0" />
-      <Text layoutX="419.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ING ID">
+      <TextField fx:id="txtQty" layoutX="98.0" layoutY="254.0" prefHeight="26.0" prefWidth="208.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="99.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ING ID">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtIngId" layoutX="419.0" layoutY="223.0" prefHeight="24.0" prefWidth="208.0" />
-      <JFXButton buttonType="RAISED" layoutX="841.0" layoutY="294.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <TextField fx:id="txtIngId" layoutX="99.0" layoutY="373.0" prefHeight="26.0" prefWidth="208.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <JFXButton buttonType="RAISED" layoutX="425.0" layoutY="734.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -48,7 +49,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="737.0" layoutY="294.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="321.0" layoutY="734.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,7 +61,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="633.0" layoutY="294.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="217.0" layoutY="734.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -72,7 +73,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="529.0" layoutY="294.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="113.0" layoutY="734.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -84,12 +85,20 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <TableView fx:id="tblBatchIng" layoutX="200.0" layoutY="395.0" prefHeight="259.0" prefWidth="616.0">
+      <TableView fx:id="tblBatchIng" layoutX="730.0" layoutY="105.0" prefHeight="662.0" prefWidth="751.0" stylesheets="@../css/BatchIngre.css">
         <columns>
-          <TableColumn fx:id="colBatId" prefWidth="195.0" text="BAT ID" />
-          <TableColumn fx:id="colQty" prefWidth="224.0" text="QTY" />
-            <TableColumn fx:id="colIngId" prefWidth="196.0" text="ING ID" />
+          <TableColumn fx:id="colBatId" prefWidth="282.0" text="BAT ID" />
+          <TableColumn fx:id="colQty" prefWidth="218.0" text="QTY" />
+            <TableColumn fx:id="colIngId" prefWidth="248.0" text="ING ID" />
         </columns>
+         <styleClass>
+            <String fx:value="table-view" />
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
    </children>
 </AnchorPane>
