--- a/src/main/resources/view/batch_form.fxml
+++ b/src/main/resources/view/batch_form.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import java.lang.String?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,49 +14,55 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.BatchFormController">
    <children>
-      <Label layoutX="451.0" layoutY="23.0" text="Batch">
+      <Label layoutX="14.0" layoutY="14.0" text="Batch">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Text layoutX="97.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="59.7294921875">
+      <Text layoutX="97.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BAT ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtBatId" layoutX="97.0" layoutY="96.0" onAction="#txtSearchOnAction" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="445.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STO ID" wrappingWidth="59.7294921875">
+      <TextField fx:id="txtBatId" layoutX="97.0" layoutY="136.0" onAction="#txtSearchOnAction" onKeyReleased="#txtBatIdOnKeyReleased" prefHeight="29.0" prefWidth="209.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <JFXComboBox fx:id="comStoId" layoutX="447.0" layoutY="132.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
+      <TextField fx:id="txtPrice" layoutX="97.0" layoutY="228.0" onKeyReleased="#txtPriceOnKeyReleased" prefHeight="29.0" prefWidth="209.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px  0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtProductionDate" layoutX="444.0" layoutY="228.0" prefHeight="29.0" prefWidth="209.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtNumOfReject" layoutX="97.0" layoutY="319.0" prefHeight="29.0" prefWidth="209.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtQty" layoutX="444.0" layoutY="319.0" onKeyReleased="#txtQtyOnKeyReleased" prefHeight="29.0" prefWidth="209.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <ChoiceBox fx:id="choiceType" layoutX="98.0" layoutY="412.0" prefHeight="29.0" prefWidth="209.0" />
+
+      <Text layoutX="445.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STO ID" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <Text layoutX="743.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="59.7294921875">
+      <Text layoutX="97.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="59.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <ChoiceBox fx:id="choiceType" layoutX="744.0" layoutY="243.0" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="445.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Production Date" wrappingWidth="131.7294921875">
+
+      <Text layoutX="445.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Production Date" wrappingWidth="131.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <Text layoutX="743.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Num Of Rejected Item" wrappingWidth="170.7294921875">
+      <Text layoutX="98.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Num Of Rejected Item" wrappingWidth="170.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtProductionDate" layoutX="444.0" layoutY="173.0" prefHeight="29.0" prefWidth="209.0" />
-      <TextField fx:id="txtNumOfReject" layoutX="743.0" layoutY="173.0" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="444.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty" wrappingWidth="170.7294921875">
+
+      <Text layoutX="444.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty" wrappingWidth="170.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtQty" layoutX="444.0" layoutY="243.0" prefHeight="29.0" prefWidth="209.0" />
-      <JFXButton buttonType="RAISED" layoutX="849.0" layoutY="328.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+
+      <JFXButton buttonType="RAISED" layoutX="399.0" layoutY="778.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -67,7 +74,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="743.0" layoutY="328.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="293.0" layoutY="778.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -79,7 +86,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="637.0" layoutY="328.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="187.0" layoutY="778.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -91,7 +98,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="531.0" layoutY="328.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="81.0" layoutY="778.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -103,33 +110,48 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <TableView fx:id="tblBatch" layoutX="20.0" layoutY="430.0" prefHeight="261.0" prefWidth="980.0">
-        <columns>
-          <TableColumn fx:id="colBatId" prefWidth="116.0" text="BAT ID" />
-          <TableColumn fx:id="colStoId" prefWidth="109.0" text="STO ID" />
+      <TableView fx:id="tblBatch" layoutX="511.0" layoutY="377.0" onMouseClicked="#tblBatOnClick" prefHeight="434.0" prefWidth="980.0" stylesheets="@../css/line.css">
+         <columns>
+            <TableColumn fx:id="colBatId" prefWidth="116.0" text="BAT ID" />
+            <TableColumn fx:id="colStoId" prefWidth="109.0" text="STO ID" />
             <TableColumn fx:id="colPrice" prefWidth="116.0" text="Unit Price" />
             <TableColumn fx:id="colType" prefWidth="236.0" text="Type" />
             <TableColumn fx:id="colProductionDate" prefWidth="172.0" text="Production Date" />
             <TableColumn fx:id="colNumberOfRejectedItem" prefWidth="124.0" text="Num Of Reject" />
             <TableColumn fx:id="colQty" prefWidth="106.0" text="Qty" />
-        </columns>
+         </columns>
+         <styleClass>
+            <String fx:value="axis" />
+            <String fx:value="axis-label" />
+            <String fx:value="axis-tick-mark" />
+            <String fx:value="chart-area" />
+            <String fx:value="chart-legend" />
+            <String fx:value="chart-line-symbol" />
+         </styleClass>
       </TableView>
-      <JFXComboBox fx:id="comStoId" layoutX="447.0" layoutY="92.0" onAction="#comStoIdOnAction" prefHeight="29.0" prefWidth="209.0" />
-      <TableView fx:id="tblEmp" layoutX="97.0" layoutY="164.0" prefHeight="218.0" prefWidth="299.0">
-        <columns>
-          <TableColumn fx:id="colEmpId" prefWidth="75.0" text="EmpId" />
-          <TableColumn fx:id="colFirstName" prefWidth="75.0" text="name" />
-            <TableColumn fx:id="colAction" prefWidth="75.0" text="Action" />
-            <TableColumn fx:id="colAction11" prefWidth="75.0" text="Action" />
-        </columns>
+
+      <TableView fx:id="tblEmp" layoutX="1110.0" layoutY="95.0" prefHeight="218.0" prefWidth="381.0" stylesheets="@../css/line.css">
+         <columns>
+            <TableColumn fx:id="colEmpId" prefWidth="83.0" text="EmpId" />
+            <TableColumn fx:id="colFirstName" prefWidth="132.0" text="name" />
+            <TableColumn fx:id="colAction" prefWidth="161.0" text="Action" />
+         </columns>
+         <styleClass>
+            <String fx:value="axis" />
+            <String fx:value="axis-label" />
+            <String fx:value="axis-tick-mark" />
+            <String fx:value="chart-area" />
+            <String fx:value="chart-legend" />
+            <String fx:value="chart-line-symbol" />
+         </styleClass>
       </TableView>
-      <Label layoutX="97.0" layoutY="143.0" text="Employee Detail:">
+      <Label layoutX="926.0" layoutY="95.0" prefHeight="29.0" prefWidth="135.0" text="Employee Detail:">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtPrice" layoutX="743.0" layoutY="96.0" prefHeight="29.0" prefWidth="209.0" />
-      <Text layoutX="743.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unit Price" wrappingWidth="82.7294921875">
+
+      <Text layoutX="97.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unit Price" wrappingWidth="82.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
