--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,30 +12,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="custAnchorpane" prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.CustomerFormController">
+<AnchorPane fx:id="custAnchorpane" prefHeight="838.0" prefWidth="1607.0" stylesheets="@../css/BatchIngre.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.CustomerFormController">
    <children>
-      <Text layoutX="110.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CUS ID" wrappingWidth="61.0">
+      <Label layoutX="14.0" layoutY="24.0" text="Customer ">
          <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Text>
-      <Text layoutX="639.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Text>
-      <Text layoutX="114.0" layoutY="224.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Text>
-      <Text layoutX="639.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Text>
-      <Label layoutX="354.0" layoutY="20.0" text="Customer Form">
-         <font>
-            <Font name="System Bold" size="32.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnSave" layoutX="777.0" layoutY="319.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <JFXButton fx:id="btnSave" layoutX="410.0" layoutY="774.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -45,7 +30,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnDelete" layoutX="662.0" layoutY="319.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton fx:id="btnDelete" layoutX="298.0" layoutY="774.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -56,7 +41,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnUpdate" layoutX="547.0" layoutY="319.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton fx:id="btnUpdate" layoutX="183.0" layoutY="774.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -67,7 +52,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnClear" layoutX="431.0" layoutY="319.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5;" text="Clear">
+      <JFXButton fx:id="btnClear" layoutX="67.0" layoutY="774.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -79,17 +64,43 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <TableView fx:id="tblCustomer" layoutX="97.0" layoutY="396.0" prefHeight="286.0" prefWidth="811.0">
+      <TableView fx:id="tblCustomer" layoutX="374.0" layoutY="55.0" onMouseClicked="#tblCustOnMouse" prefHeight="666.0" prefWidth="1203.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colId" prefWidth="123.0" text="CUS ID" />
-          <TableColumn fx:id="colName" prefWidth="220.0" text="Name" />
-            <TableColumn fx:id="colAddress" prefWidth="234.0" text="Address" />
-            <TableColumn fx:id="colTel" prefWidth="233.0" text="Tel" />
+          <TableColumn fx:id="colName" prefWidth="309.0" text="Name" />
+            <TableColumn fx:id="colAddress" prefWidth="459.0" text="Address" />
+            <TableColumn fx:id="colTel" prefWidth="309.0" text="Tel" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
-      <TextField fx:id="txtCusId" layoutX="110.0" layoutY="133.0" onAction="#txtSearchOnAction" prefHeight="40.0" prefWidth="241.0" />
-      <TextField fx:id="txtName" layoutX="632.0" layoutY="124.0" prefHeight="40.0" prefWidth="241.0" />
-      <TextField fx:id="txtAddress" layoutX="110.0" layoutY="236.0" prefHeight="40.0" prefWidth="241.0" />
-      <TextField fx:id="txtTel" layoutX="632.0" layoutY="244.0" prefHeight="40.0" prefWidth="241.0" />
+      <Text layoutX="57.0" layoutY="451.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
+      <TextField fx:id="txtAddress" layoutX="57.0" layoutY="466.0" prefHeight="31.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtName" layoutX="57.0" layoutY="270.0" onKeyReleased="#txtNameOnKeyReleased" prefHeight="31.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="57.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtTel" layoutX="57.0" layoutY="362.0" prefHeight="33.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="58.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
+      <Text layoutX="58.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CUS ID " wrappingWidth="74.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtCusId" layoutX="57.0" layoutY="164.0" onAction="#txtSearchOnAction" onKeyReleased="#txtCusIdOnKeyReleased" prefHeight="33.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
    </children>
 </AnchorPane>
