--- a/src/main/resources/view/dashBoard_form.fxml
+++ b/src/main/resources/view/dashBoard_form.fxml
@@ -1,181 +1,173 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorpaneDash" prefHeight="719.0" prefWidth="1019.0" style="-fx-background-color: #f1fcfc;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashBoardFormController">
+<AnchorPane fx:id="anchorpaneDash" prefHeight="838.0" prefWidth="1607.0" styleClass="dashboard-pane" stylesheets="@../css/Main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.DashBoardFormController">
    <children>
-      <AnchorPane layoutX="325.0" layoutY="160.0" prefHeight="112.0" prefWidth="200.0" style="-fx-background-color: #ffff00;">
+      <HBox layoutX="9.0" layoutY="364.0" prefHeight="421.0" prefWidth="1607.0">
          <children>
-            <Label layoutX="10.0" layoutY="26.0" text="Customer Count">
+            <VBox prefHeight="382.0" prefWidth="517.0">
+               <children>
+                  <Label text="The total sum of payments per day">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <LineChart fx:id="lineChart" legendVisible="false" prefHeight="382.0" prefWidth="523.0" stylesheets="@../css/line.css">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                     <styleClass>
+                        <String fx:value="axis" />
+                        <String fx:value="axis-label" />
+                        <String fx:value="axis-tick-mark" />
+                        <String fx:value="chart-area" />
+                        <String fx:value="chart-legend" />
+                        <String fx:value="chart-line-symbol" />
+                        <String fx:value="dashboard-pane" />
+                     </styleClass>
+                  </LineChart>
+               </children>
+            </VBox>
+            <VBox prefHeight="382.0" prefWidth="549.0">
+               <children>
+                  <Label text="Amount of ingredients on hand">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <PieChart fx:id="pieChart" prefHeight="382.0" prefWidth="793.0" />
+               </children>
+            </VBox>
+            <VBox prefHeight="382.0" prefWidth="542.0">
+               <children>
+                  <Label text="Amount of orders received per day">
+                     <font>
+                        <Font name="System Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <BarChart fx:id="barchart" legendVisible="false">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </BarChart>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <AnchorPane layoutX="128.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: bb5ae2; -fx-background-radius: 13;">
+         <children>
+            <Label layoutX="10.0" layoutY="18.0" text="Customer Count">
                <font>
-                  <Font name="DejaVu Sans Bold" size="20.0" />
+                  <Font name="DejaVu Sans Bold" size="22.0" />
                </font>
             </Label>
-            <Label layoutX="81.0" layoutY="70.0" text="20">
+            <Label fx:id="lblCusCount" layoutX="243.0" layoutY="78.0" prefHeight="85.0" prefWidth="68.0" text="20" textFill="#7c2226">
                <font>
-                  <Font name="System Bold" size="29.0" />
+                  <Font name="System Bold" size="46.0" />
                </font>
             </Label>
+            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="13.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/img.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="773.0" layoutY="160.0" prefHeight="112.0" prefWidth="200.0" style="-fx-background-color: #00e5ff;">
+      <AnchorPane layoutX="1152.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #00e5ff; -fx-background-radius: 10;">
          <children>
-            <Label layoutX="31.0" layoutY="26.0" text="Order Count">
+            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/cl3oal8w6000c79570tgf4k1k.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="31.0" layoutY="14.0" text="Order Count">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="80.0" layoutY="73.0" text="20">
+            <Label fx:id="lblOrderCount" layoutX="243.0" layoutY="92.0" text="20" textFill="#7c2226">
                <font>
-                  <Font name="System Bold" size="29.0" />
+                  <Font name="System Bold" size="46.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="549.0" layoutY="160.0" prefHeight="112.0" prefWidth="200.0" style="-fx-background-color: #00e676;">
+      <AnchorPane layoutX="471.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #ffb74d; -fx-background-radius: 10;">
          <children>
-            <Label layoutX="9.0" layoutY="27.0" text="Employee Count">
+            <Label layoutX="9.0" layoutY="15.0" text="Employee Count">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="80.0" layoutY="72.0" text="20">
+            <Label fx:id="lblEmpCount" layoutX="243.0" layoutY="92.0" text="20" textFill="#7c2226">
                <font>
-                  <Font name="System Bold" size="29.0" />
+                  <Font name="System Bold" size="46.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/employee-engagement-statistics.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="812.0" layoutY="79.0" prefHeight="240.0" prefWidth="322.0" style="-fx-background-color: #5ae287; -fx-background-radius: 10;">
+         <children>
+            <ImageView fitHeight="152.0" fitWidth="212.0" layoutX="14.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Supplier.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="17.0" layoutY="14.0" text="Supplier Count">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblSupCount" layoutX="253.0" layoutY="92.0" text="20" textFill="#7c2226">
+               <font>
+                  <Font name="System Bold" size="46.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <JFXButton buttonType="RAISED" layoutX="120.0" layoutY="369.0" onAction="#btnBatchCostOnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #e25a87;" text="BatchCost">
+      <Label layoutX="24.0" layoutY="25.0" text="DASH BOARD">
          <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="39.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-dashboard-100.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="277.0" layoutY="369.0" onAction="#btnCustomer1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #bb5ae2;" text="Customer">
-         <graphic>
-            <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-customer-96.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="435.0" layoutY="369.0" onAction="#btnOrder1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #5ae287;" text="Order">
-         <graphic>
-            <ImageView fitHeight="36.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-order-60.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="595.0" layoutY="369.0" onAction="#btnBatch1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #ddb042;" text="Batch">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-batch-64.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="754.0" layoutY="369.0" onAction="#btnEmployee1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #ed7c7c;" text="Employee">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-employee-68.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <Label layoutX="397.0" layoutY="28.0" prefHeight="46.0" prefWidth="214.0" style="-fx-background-color: #f1fcfc;" text="DashBord">
-         <font>
-            <Font name="System Bold" size="38.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Text fontSmoothingType="LCD" layoutX="98.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The best and quality sea food producers, we are lnv sea food factory" wrappingWidth="155.0">
+      <Label layoutX="1315.0" layoutY="10.0" text="HI..! WELCOME ">
          <font>
-            <Font name="Timmana Regular" size="18.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
-      </Text>
-      <Line endX="123.0" layoutX="492.0" layoutY="75.0" startX="-100.0" strokeWidth="3.0" />
-      <ImageView fitHeight="268.0" fitWidth="264.0" layoutX="31.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/27709-200.png" />
-         </image>
-      </ImageView>
-      <JFXButton buttonType="RAISED" layoutX="192.0" layoutY="523.0" onAction="#btnIngredient1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #4fc3f7;" text="Ingredient">
-         <graphic>
-            <ImageView fitHeight="39.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-fish-50.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      </Label>
+      <Label layoutX="1281.0" layoutY="50.0" text="THIS IS LNV MANAGEMENT SYSTEM">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font size="16.0" />
          </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="359.0" layoutY="523.0" onAction="#btnSupplier1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #ffb74d;" text="Supplier">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-supplier-96.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      </Label>
+      <Label layoutX="24.0" layoutY="25.0" text="DASH BOARD">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="525.0" layoutY="523.0" onAction="#btnCustomer1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #bdbdbd;" text="Customer">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-customer-96.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="683.0" layoutY="523.0" onAction="#btnOrderPlace1OnAction" prefHeight="105.0" prefWidth="133.0" style="-fx-background-color: #ef5350;" text="OrderPlace">
-         <graphic>
-            <ImageView fitHeight="37.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-create-order-64.png" />
-               </image>
-            </ImageView>
-         </graphic>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
+      </Label>
    </children>
 </AnchorPane>
