--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.EmployeeFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.EmployeeFormController">
    <children>
-      <Label layoutX="422.0" layoutY="26.0" text="Employee">
+      <Label layoutX="28.0" layoutY="32.0" text="Employee">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
@@ -23,44 +24,44 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtEmpId" layoutX="104.0" layoutY="154.0" onAction="#txtSearchOnAction" prefHeight="28.0" prefWidth="211.0" />
+      <TextField fx:id="txtEmpId" layoutX="104.0" layoutY="154.0" onAction="#txtSearchOnAction" onKeyReleased="#txtEmpIdOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
       <Text layoutX="415.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtFirstName" layoutX="415.0" layoutY="154.0" prefHeight="28.0" prefWidth="211.0" />
-      <Text layoutX="718.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtFirstName" layoutX="415.0" layoutY="154.0" onKeyReleased="#txtFirstNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="229.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtLastName" layoutX="718.0" layoutY="154.0" prefHeight="28.0" prefWidth="211.0" />
-      <Text layoutX="104.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtLastName" layoutX="104.0" layoutY="241.0" onKeyReleased="#txtLastNameOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="415.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtAddress" layoutX="104.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
-      <Text layoutX="415.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtAddress" layoutX="415.0" layoutY="241.0" onKeyReleased="#txtAddressOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtTel" layoutX="415.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
-      <Text layoutX="718.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salary" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtTel" layoutX="104.0" layoutY="323.0" onKeyReleased="#txtTelOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="419.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salary" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtSalary" layoutX="718.0" layoutY="241.0" prefHeight="28.0" prefWidth="211.0" />
-      <Text layoutX="415.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" wrappingWidth="88.7294921875">
+      <TextField fx:id="txtSalary" layoutX="414.0" layoutY="323.0" onKeyReleased="#txtSalaryOnKeyReleased" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="105.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" wrappingWidth="88.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtPosition" layoutX="415.0" layoutY="323.0" prefHeight="28.0" prefWidth="211.0" />
-      <JFXButton buttonType="RAISED" layoutX="867.0" layoutY="371.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <TextField fx:id="txtPosition" layoutX="105.0" layoutY="403.0" prefHeight="28.0" prefWidth="211.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <JFXButton buttonType="RAISED" layoutX="537.0" layoutY="751.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -72,7 +73,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="758.0" layoutY="371.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="428.0" layoutY="751.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -84,7 +85,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="649.0" layoutY="371.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="319.0" layoutY="751.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -96,7 +97,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="539.0" layoutY="371.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="209.0" layoutY="751.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -108,7 +109,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <TableView fx:id="tblEmployee" layoutX="55.0" layoutY="457.0" prefHeight="225.0" prefWidth="909.0">
+      <TableView fx:id="tblEmployee" layoutX="669.0" layoutY="67.0" onMouseClicked="#tblEmpOnMouse" prefHeight="718.0" prefWidth="909.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colEmpId" prefWidth="86.0" text="EMP ID" />
           <TableColumn fx:id="colFirstName" prefWidth="151.0" text="First Name" />
@@ -117,6 +118,25 @@
             <TableColumn fx:id="colSalary" prefWidth="174.0" text="Salary" />
             <TableColumn fx:id="colPosition" prefWidth="180.0" text="Position" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
+      <JFXButton buttonType="RAISED" layoutX="92.0" layoutY="751.0" onAction="#btnReportOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Report">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-clear-90.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
