--- a/src/main/resources/view/mainBoard_form.fxml
+++ b/src/main/resources/view/mainBoard_form.fxml
@@ -1,56 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Anchorpane1" prefHeight="779.0" prefWidth="1198.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.MainBoardFormController">
+<AnchorPane fx:id="Anchorpane1" stylesheets="@../css/Login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.MainBoardFormController">
    <children>
-      <AnchorPane layoutX="-7.0" prefHeight="825.0" prefWidth="237.0" style="-fx-background-color: #0c0c31;">
+      <AnchorPane layoutX="-7.0" prefHeight="1015.0" prefWidth="285.0" stylesheets="@../css/Main.css">
          <children>
-            <JFXButton fx:id="btnDashboard" buttonType="RAISED" layoutX="12.0" layoutY="242.0" onAction="#btnDashboardOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Dashboard" textFill="WHITE">
+            <JFXButton fx:id="btnDashboard" layoutX="12.0" layoutY="240.0" onAction="#btnDashboardOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Dashboard" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="btnCustomer" layoutX="12.0" layoutY="295.0" onAction="#btnCustomerOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Customer" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnCustomer" buttonType="RAISED" layoutX="12.0" layoutY="295.0" onAction="#btnCustomerOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Customer" textFill="WHITE">
+            <JFXButton layoutX="12.0" layoutY="348.0" onAction="#btnOrderOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Place Order" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="12.0" layoutY="348.0" onAction="#btnOrderOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Order" textFill="WHITE">
+            <JFXButton layoutX="12.0" layoutY="401.0" onAction="#btnSupplierOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Supplier" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="12.0" layoutY="401.0" onAction="#btnSupplierOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Supplier" textFill="WHITE">
+            <JFXButton layoutX="12.0" layoutY="454.0" onAction="#btnBatchOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Batch" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="12.0" layoutY="454.0" onAction="#btnBatchOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Batch" textFill="WHITE">
+            <JFXButton layoutX="12.0" layoutY="507.0" onAction="#btnIngredientOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Ingredients" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="12.0" layoutY="507.0" onAction="#btnIngredientOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Ingredients" textFill="WHITE">
+            <JFXButton layoutX="13.0" layoutY="560.0" onAction="#btnEmployeeOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Employee" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="13.0" layoutY="560.0" onAction="#btnEmployeeOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Employee" textFill="WHITE">
+            <JFXButton layoutX="13.0" layoutY="613.0" onAction="#btnStoreOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Store" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="13.0" layoutY="613.0" onAction="#btnStoreOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Store" textFill="WHITE">
+            <JFXButton layoutX="13.0" layoutY="773.0" onAction="#btnPaymentOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Payment" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="13.0" layoutY="773.0" onAction="#btnPaymentOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="Payment" textFill="WHITE">
+            <JFXButton layoutX="12.0" layoutY="666.0" onAction="#btnBatchEmployeeOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="BatchEmployee" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="12.0" layoutY="719.0" onAction="#btnBatchIngredientOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="BatchIngredient" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
@@ -100,63 +111,62 @@
                   <Image url="@../images/icons8-payment-100.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="12.0" layoutY="666.0" onAction="#btnBatchEmployeeOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="BatchEmployee" textFill="WHITE">
+            <ImageView fitHeight="31.0" fitWidth="124.0" layoutX="38.0" layoutY="673.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-batch-assign-96.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="44.0" fitWidth="31.0" layoutX="40.0" layoutY="724.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-fish-and-chips-100.png" />
+               </image>
+            </ImageView>
+            <JFXButton layoutX="13.0" layoutY="823.0" onAction="#btnBatchCostOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Batch Cost" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
+            </JFXButton>
+            <ImageView fitHeight="31.0" fitWidth="150.0" layoutX="39.0" layoutY="830.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-cost-64(1).png" />
+               </image>
+            </ImageView>
+         </children>
+         <styleClass>
+            <String fx:value="dashboard-pane" />
+            <String fx:value="dashboard-paneA" />
+         </styleClass>
+      </AnchorPane>
+      <AnchorPane fx:id="Anchorpanemain" layoutX="298.0" prefHeight="838.0" prefWidth="1607.0" stylesheets="@../css/Main.css">
+         <styleClass>
+            <String fx:value="dashboard-pane" />
+            <String fx:value="dashboard-paneA" />
+         </styleClass></AnchorPane>
+      <AnchorPane layoutX="299.0" layoutY="857.0" prefHeight="158.0" prefWidth="1607.0" stylesheets="@../css/Main.css">
+         <children>
+            <JFXButton buttonType="RAISED" layoutX="67.0" layoutY="39.0" onAction="#btnBackOnAction" prefHeight="44.0" prefWidth="118.0" text="Back">
                <graphic>
-                  <ImageView fitHeight="31.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/icons8-batch-assign-96.png" />
+                        <Image url="@../images/icons8-back-96.png" />
                      </image>
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="12.0" layoutY="719.0" onAction="#btnBatchIngredientOnAction" prefHeight="44.0" prefWidth="220.0" style="-fx-background-color: #53ea80;" text="BatchIngredient" textFill="WHITE">
-               <font>
-                  <Font size="16.0" />
-               </font>
+            <JFXButton buttonType="RAISED" layoutX="1465.0" layoutY="39.0" onAction="#btnLogOutOnAction" prefHeight="44.0" prefWidth="118.0" text="Log Out">
                <graphic>
-                  <ImageView fitHeight="44.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="23.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/icons8-fish-and-chips-100.png" />
+                        <Image url="@../images/icons8-logout-96.png" />
                      </image>
                   </ImageView>
                </graphic>
             </JFXButton>
          </children>
+         <styleClass>
+            <String fx:value="dashboard-pane" />
+            <String fx:value="dashboard-paneA" />
+         </styleClass>
       </AnchorPane>
-      <AnchorPane fx:id="Anchorpanemain1" layoutX="229.0" prefHeight="680.0" prefWidth="1019.0">
-         <children>
-            <AnchorPane layoutX="1.0" layoutY="718.0" prefHeight="107.0" prefWidth="1018.0" style="-fx-background-color: #0c0c31;">
-               <children>
-                  <JFXButton buttonType="RAISED" layoutX="854.0" layoutY="32.0" onAction="#btnLogOutOnAction" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #f1fcfc;" text="LogOut">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/icons8-logout-96.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="107.0" layoutY="32.0" onAction="#btnBackOnAction" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #a1887f;" text="Back">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/icons8-back-96.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </JFXButton>
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="Anchorpanemain" layoutY="-1.0" prefHeight="719.0" prefWidth="1019.0" />
-         </children></AnchorPane>
    </children>
 </AnchorPane>
