--- a/src/main/resources/view/orderDetail_form.fxml
+++ b/src/main/resources/view/orderDetail_form.fxml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.OrderDetailFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.OrderDetailFormController">
    <children>
-      <Label layoutX="421.0" layoutY="26.0" prefHeight="30.0" prefWidth="177.0" text="Order Detail">
+      <Label layoutX="14.0" layoutY="23.0" prefHeight="30.0" prefWidth="177.0" text="Order Detail">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <TableView fx:id="tblOrderDetail" layoutX="161.0" layoutY="89.0" prefHeight="579.0" prefWidth="712.0">
+      <TableView fx:id="tblOrderDetail" layoutX="362.0" layoutY="100.0" prefHeight="711.0" prefWidth="883.0" stylesheets="@../css/BatchIngre.css">
         <columns>
-          <TableColumn fx:id="colOrdId" prefWidth="262.0" text="ORD ID" />
-          <TableColumn fx:id="colBatId" prefWidth="198.0" text="BAT ID" />
-            <TableColumn fx:id="colQty" prefWidth="251.0" text="Quantity" />
+          <TableColumn fx:id="colOrdId" prefWidth="274.0" text="ORD ID" />
+          <TableColumn fx:id="colBatId" prefWidth="256.0" text="BAT ID" />
+            <TableColumn fx:id="colQty" prefWidth="350.0" text="Quantity" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
    </children>
 </AnchorPane>
