--- a/src/main/resources/view/store_form.fxml
+++ b/src/main/resources/view/store_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.StoreFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.StoreFormController">
    <children>
-      <Label layoutX="452.0" layoutY="19.0" text="Store">
+      <Label layoutX="14.0" layoutY="25.0" text="Store">
          <font>
             <Font name="System Bold" size="34.0" />
          </font>
@@ -23,20 +24,20 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtStoId" layoutX="137.0" layoutY="154.0" onAction="#txtSearchOnAction" prefHeight="33.0" prefWidth="213.0" />
-      <Text layoutX="642.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Capacity" wrappingWidth="64.7294921875">
+      <TextField fx:id="txtStoId" layoutX="137.0" layoutY="154.0" onAction="#txtSearchOnAction" onKeyReleased="#txtStoIdOnKeyReleased" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
+      <Text layoutX="527.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Capacity" wrappingWidth="64.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtCapacity" layoutX="642.0" layoutY="154.0" prefHeight="33.0" prefWidth="213.0" />
-      <Text layoutX="402.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" wrappingWidth="64.7294921875">
+      <TextField fx:id="txtCapacity" layoutX="527.0" layoutY="154.0" onKeyReleased="#txtCapacityOnKeyReleased" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
+      <Text layoutX="147.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" wrappingWidth="64.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtLocation" layoutX="402.0" layoutY="255.0" prefHeight="33.0" prefWidth="213.0" />
-      <JFXButton buttonType="RAISED" layoutX="834.0" layoutY="344.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <TextField fx:id="txtLocation" layoutX="147.0" layoutY="305.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
+      <JFXButton buttonType="RAISED" layoutX="474.0" layoutY="744.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -48,7 +49,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="727.0" layoutY="344.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton buttonType="RAISED" layoutX="367.0" layoutY="744.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,7 +61,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="620.0" layoutY="344.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton buttonType="RAISED" layoutX="260.0" layoutY="744.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -72,7 +73,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="513.0" layoutY="344.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton buttonType="RAISED" layoutX="153.0" layoutY="744.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -84,12 +85,19 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <TableView fx:id="tblStore" layoutX="210.0" layoutY="435.0" prefHeight="228.0" prefWidth="607.0">
+      <TableView fx:id="tblStore" layoutX="904.0" layoutY="57.0" onMouseClicked="#tblStoreOnMouse" prefHeight="741.0" prefWidth="607.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colStoId" prefWidth="185.0" text="STO ID" />
           <TableColumn fx:id="colCapacity" prefWidth="226.0" text="Capacity" />
             <TableColumn fx:id="colLocation" prefWidth="195.0" text="Location" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
    </children>
 </AnchorPane>
