--- a/src/main/resources/view/supplier_form.fxml
+++ b/src/main/resources/view/supplier_form.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,43 +13,43 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.SupplierFormController">
+<AnchorPane prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.SupplierFormController">
    <children>
-      <Label layoutX="433.0" layoutY="20.0" text="Supplier">
+      <Label layoutX="14.0" layoutY="14.0" text="Supplier">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </Label>
-      <Text layoutX="106.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUP ID" wrappingWidth="55.0">
+      <Text layoutX="106.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUP ID" wrappingWidth="55.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtSupId" layoutX="106.0" layoutY="160.0" onAction="#txtSearchOnAction" prefHeight="30.0" prefWidth="205.0" />
-      <Text layoutX="405.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company Name" wrappingWidth="124.0">
+      <TextField fx:id="txtSupId" layoutX="106.0" layoutY="130.0" onAction="#txtSearchOnAction" onKeyReleased="#txtSupIdOnKeyReleased" prefHeight="30.0" prefWidth="205.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px  2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="485.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company Name" wrappingWidth="124.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtCompanyName" layoutX="405.0" layoutY="160.0" prefHeight="30.0" prefWidth="205.0" />
-      <Text layoutX="710.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="124.0">
+      <TextField fx:id="txtCompanyName" layoutX="485.0" layoutY="130.0" prefHeight="30.0" prefWidth="205.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="106.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="124.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtAddress" layoutX="710.0" layoutY="160.0" prefHeight="30.0" prefWidth="205.0" />
-      <Text layoutX="260.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contact" wrappingWidth="124.0">
+      <TextField fx:id="txtAddress" layoutX="106.0" layoutY="236.0" onKeyReleased="#txtAddressOnKeyReleased" prefHeight="30.0" prefWidth="205.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="486.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contact" wrappingWidth="124.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtContact" layoutX="260.0" layoutY="259.0" prefHeight="30.0" prefWidth="205.0" />
-      <Text layoutX="581.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ING ID" wrappingWidth="124.0">
+      <TextField fx:id="txtContact" layoutX="486.0" layoutY="236.0" onKeyReleased="#txtContactOnKeyReleased" prefHeight="30.0" prefWidth="205.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <Text layoutX="111.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ING ID" wrappingWidth="124.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <JFXButton layoutX="862.0" layoutY="331.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #03a9f4;" text="Save">
+      <JFXButton layoutX="420.0" layoutY="761.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,7 +61,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton layoutX="756.0" layoutY="331.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #d50000;" text="Delete">
+      <JFXButton layoutX="314.0" layoutY="761.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -72,7 +73,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton layoutX="650.0" layoutY="331.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #ffff00;" text="Update">
+      <JFXButton layoutX="208.0" layoutY="761.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -84,7 +85,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <JFXButton layoutX="544.0" layoutY="331.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" style="-fx-background-color: #b0bec5 #b0bec5 #b0bec5 #b0bec5;" text="Clear">
+      <JFXButton layoutX="102.0" layoutY="761.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -96,7 +97,7 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <TableView fx:id="tblSupplier" layoutX="87.0" layoutY="442.0" prefHeight="246.0" prefWidth="842.0">
+      <TableView fx:id="tblSupplier" layoutX="739.0" layoutY="52.0" onMouseClicked="#tblSupOnMouse" prefHeight="747.0" prefWidth="840.0" stylesheets="@../css/BatchIngre.css">
         <columns>
           <TableColumn fx:id="colSupId" prefWidth="132.0" text="SUP ID" />
           <TableColumn fx:id="colCompanyName" prefWidth="197.0" text="Company Name" />
@@ -104,7 +105,14 @@
             <TableColumn fx:id="colContact" prefWidth="203.0" text="Contact" />
             <TableColumn fx:id="colIngId" prefWidth="145.0" text="ING ID" />
         </columns>
+         <styleClass>
+            <String fx:value="column-header-background" />
+            <String fx:value="table-cell" />
+            <String fx:value="table-column" />
+            <String fx:value="table-row-cell" />
+            <String fx:value="table-view" />
+         </styleClass>
       </TableView>
-      <JFXComboBox fx:id="comIngId" layoutX="582.0" layoutY="262.0" onAction="#ComIngIdOnAction" prefHeight="30.0" prefWidth="205.0" />
+      <JFXComboBox fx:id="comIngId" layoutX="106.0" layoutY="342.0" onAction="#ComIngIdOnAction" prefHeight="30.0" prefWidth="205.0" />
    </children>
 </AnchorPane>
