--- a/src/main/resources/Report/EmployeeBill.jrxml
+++ b/src/main/resources/Report/EmployeeBill.jrxml
@@ -7,9 +7,7 @@
     <queryString language="SQL">
         <![CDATA[SELECT *
 
-FROM `LnvCo`.employee
-
-]]>
+FROM `LnvCo`.employee]]>
     </queryString>
     <field name="EMP_ID" class="java.lang.String">
         <property name="com.jaspersoft.studio.field.name" value="EMP_ID"/>
@@ -79,7 +77,7 @@ FROM `LnvCo`.employee
         <band splitType="Stretch"/>
     </background>
     <title>
-        <band height="79" splitType="Stretch">
+        <band height="115" splitType="Stretch">
             <staticText>
                 <reportElement x="180" y="5" width="224" height="30" uuid="6453232b-a103-4b4f-b0c0-124817f72dfe"/>
                 <textElement>
@@ -101,21 +99,21 @@ FROM `LnvCo`.employee
                 </textElement>
                 <text><![CDATA[0354718456]]></text>
             </staticText>
+            <image>
+                <reportElement x="30" y="-20" width="131" height="120" uuid="d4051108-3f01-4c2b-9178-163ab4e185df"/>
+                <imageExpression><![CDATA["/home/sehan/Downloads/WhatsApp Image 2024-05-08 at 10.35.54 PM.jpeg"]]></imageExpression>
+            </image>
         </band>
     </title>
     <pageHeader>
         <band height="42" splitType="Stretch">
             <staticText>
                 <reportElement x="200" y="5" width="190" height="30" uuid="ae31146a-fcc2-4af0-86ae-8109562583c0"/>
-                <textElement verticalAlignment="Middle">
-                    <font size="12" isBold="true"/>
+                <textElement verticalAlignment="Middle" markup="rtf">
+                    <font size="12" isBold="true" isUnderline="true"/>
                 </textElement>
                 <text><![CDATA[Employee Details]]></text>
             </staticText>
-            <textField>
-                <reportElement x="-9" y="12" width="100" height="30" uuid="77ccfbc9-4c50-4110-b4ce-d8dccf25b22f"/>
-                <textFieldExpression><![CDATA[$P{employeeId}]]></textFieldExpression>
-            </textField>
         </band>
     </pageHeader>
     <columnHeader>
