--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -19,7 +19,7 @@
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnSave" layoutX="410.0" layoutY="774.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
+      <JFXButton fx:id="btnSave" layoutX="473.0" layoutY="774.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -30,7 +30,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnDelete" layoutX="298.0" layoutY="774.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
+      <JFXButton fx:id="btnDelete" layoutX="361.0" layoutY="774.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonDelete" stylesheets="@../css/button.css" text="Delete">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -41,7 +41,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnUpdate" layoutX="183.0" layoutY="774.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
+      <JFXButton fx:id="btnUpdate" layoutX="246.0" layoutY="774.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonUpdate" stylesheets="@../css/button.css" text="Update">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -52,7 +52,7 @@
                </image>
             </ImageView>
          </graphic></JFXButton>
-      <JFXButton fx:id="btnClear" layoutX="67.0" layoutY="774.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
+      <JFXButton fx:id="btnClear" layoutX="130.0" layoutY="774.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Clear">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -83,14 +83,14 @@
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Text>
-      <TextField fx:id="txtAddress" layoutX="57.0" layoutY="466.0" prefHeight="31.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtAddress" layoutX="57.0" layoutY="466.0" onKeyReleased="#txtAddressOnKeyReleased" prefHeight="31.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
       <TextField fx:id="txtName" layoutX="57.0" layoutY="270.0" onKeyReleased="#txtNameOnKeyReleased" prefHeight="31.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
       <Text layoutX="57.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="txtTel" layoutX="57.0" layoutY="362.0" prefHeight="33.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <TextField fx:id="txtTel" layoutX="57.0" layoutY="362.0" onKeyReleased="#txtTelOnKeyReleased" prefHeight="33.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
       <Text layoutX="58.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -102,5 +102,17 @@
          </font>
       </Text>
       <TextField fx:id="txtCusId" layoutX="57.0" layoutY="164.0" onAction="#txtSearchOnAction" onKeyReleased="#txtCusIdOnKeyReleased" prefHeight="33.0" prefWidth="241.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: black;" />
+      <JFXButton fx:id="btnClear1" layoutX="20.0" layoutY="774.0" onAction="#btnBillOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonClear" stylesheets="@../css/button.css" text="Report">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-bill-94.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
    </children>
 </AnchorPane>
