--- a/src/main/resources/view/forgetPassword2_form.fxml
+++ b/src/main/resources/view/forgetPassword2_form.fxml
@@ -1,54 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="301.0" prefWidth="481.0" style="-fx-background-color: #0c0c31#0c0c31;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ForgetPassword2FormController">
+<AnchorPane fx:id="anchorpaneForget2" prefHeight="460.0" prefWidth="793.0" stylesheets="@../css/f2.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ForgetPassword2FormController">
    <children>
-      <Label layoutX="202.0" layoutY="14.0" prefHeight="36.0" prefWidth="78.0" text="OTP" textFill="#f5e8e8">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Label>
-      <Text layoutX="80.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The otp has been sent,check your email..." wrappingWidth="322.734375">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Text>
-      <TextField fx:id="txt1" layoutX="44.0" layoutY="137.0" prefHeight="69.0" prefWidth="78.0">
+      <AnchorPane layoutX="7.0" layoutY="21.0" prefHeight="416.0" prefWidth="780.0" styleClass="inner-pane" stylesheets="@../css/f2.css">
+         <children>
+            <Label fx:id="lblStatus" layoutX="86.0" layoutY="299.0" prefHeight="40.0" prefWidth="249.0" textFill="#791313">
+               <font>
+                  <Font name="DejaVu Serif Bold Italic" size="33.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblMain" layoutX="44.0" layoutY="19.0" prefHeight="66.0" prefWidth="371.0" styleClass="lblMain" stylesheets="@../css/f2.css" text="OTP Verification">
+               <font>
+                  <Font name="System Bold" size="38.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="86.0" prefHeight="46.0" prefWidth="447.0" styleClass="lblMain" stylesheets="@../css/f2.css" text="We just sent you a verification code to your gmail">
+               <font>
+                  <Font name="System Bold Italic" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="93.0" layoutY="116.0" prefHeight="46.0" prefWidth="284.0" styleClass="lblMain" stylesheets="@../css/f2.css" text="Plese check it for find your otp">
+               <font>
+                  <Font name="System Bold Italic" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblOtp" layoutX="17.0" layoutY="172.0" opacity="0.0" text="Label" textFill="#090f2f" />
+            <JFXButton fx:id="btnConfirm" buttonType="RAISED" layoutX="299.0" layoutY="354.0" onAction="#btnConfirmOnAction" prefHeight="24.0" prefWidth="108.0" text="Verify">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="jfx-button-vv" />
+                  <String fx:value="jfx-button-v" />
+               </styleClass>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+      <TextField fx:id="txt1" layoutX="21.0" layoutY="232.0" onKeyReleased="#txt1KeyReleased" prefHeight="69.0" prefWidth="78.0">
          <font>
             <Font size="28.0" />
          </font>
       </TextField>
-      <TextField fx:id="txt2" layoutX="149.0" layoutY="137.0" prefHeight="69.0" prefWidth="78.0">
+      <TextField fx:id="txt2" layoutX="126.0" layoutY="232.0" onKeyReleased="#txt2KeyReleased" prefHeight="69.0" prefWidth="78.0">
          <font>
             <Font size="28.0" />
          </font>
       </TextField>
-      <TextField fx:id="txt3" layoutX="252.0" layoutY="137.0" prefHeight="69.0" prefWidth="78.0">
+      <TextField fx:id="txt3" layoutX="229.0" layoutY="232.0" onKeyReleased="#txt3KeyReleased" prefHeight="69.0" prefWidth="78.0">
          <font>
             <Font size="28.0" />
          </font>
       </TextField>
-      <TextField fx:id="txt4" layoutX="358.0" layoutY="137.0" prefHeight="69.0" prefWidth="78.0">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </TextField>
-      <JFXButton fx:id="btnBack" buttonType="RAISED" layoutX="45.0" layoutY="254.0" onAction="#btnBackOnAction" prefHeight="24.0" prefWidth="108.0" style="-fx-background-color: #e1e75d;" text="Back">
+      <JFXButton fx:id="btnBack" buttonType="RAISED" layoutX="27.0" layoutY="376.0" onAction="#btnBackOnAction" prefHeight="24.0" prefWidth="108.0" text="Back">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnConfirm" buttonType="RAISED" layoutX="329.0" layoutY="254.0" onAction="#btnConfirmOnAction" prefHeight="24.0" prefWidth="108.0" style="-fx-background-color: #fecaca;" text="Confirm">
+      <ImageView fitHeight="321.0" fitWidth="335.0" layoutX="454.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/img_5.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="txt4" layoutX="335.0" layoutY="232.0" onKeyReleased="#txt4KeyReleased" prefHeight="69.0" prefWidth="78.0" stylesheets="@../css/f2.css">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font size="28.0" />
          </font>
-      </JFXButton>
+         <styleClass>
+            <String fx:value="text-content" />
+            <String fx:value="text-field" />
+         </styleClass>
+      </TextField>
    </children>
 </AnchorPane>
