--- a/src/main/resources/view/mainBoard_form.fxml
+++ b/src/main/resources/view/mainBoard_form.fxml
@@ -131,6 +131,21 @@
                   <Image url="@../images/icons8-cost-64(1).png" />
                </image>
             </ImageView>
+            <ImageView fitHeight="215.0" fitWidth="258.0" layoutX="24.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logoi%20main%202.png" />
+               </image>
+            </ImageView>
+            <JFXButton layoutX="12.0" layoutY="871.0" onAction="#btnOrderDetailOnAction" prefHeight="44.0" prefWidth="261.0" style="-fx-background-radius: 10;" styleClass="jfx-button" stylesheets="@../css/Main.css" text="Order Detail" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="31.0" fitWidth="150.0" layoutX="40.0" layoutY="874.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8-analyze-100.png" />
+               </image>
+            </ImageView>
          </children>
          <styleClass>
             <String fx:value="dashboard-pane" />
@@ -144,7 +159,7 @@
          </styleClass></AnchorPane>
       <AnchorPane layoutX="299.0" layoutY="857.0" prefHeight="158.0" prefWidth="1607.0" stylesheets="@../css/Main.css">
          <children>
-            <JFXButton buttonType="RAISED" layoutX="67.0" layoutY="39.0" onAction="#btnBackOnAction" prefHeight="44.0" prefWidth="118.0" text="Back">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="29.0" onAction="#btnBackOnAction" prefHeight="44.0" prefWidth="118.0" text="Back">
                <graphic>
                   <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -153,7 +168,7 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="1465.0" layoutY="39.0" onAction="#btnLogOutOnAction" prefHeight="44.0" prefWidth="118.0" text="Log Out">
+            <JFXButton buttonType="RAISED" layoutX="1465.0" layoutY="29.0" onAction="#btnLogOutOnAction" prefHeight="44.0" prefWidth="118.0" text="Log Out">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
