--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorpaneOrder" prefHeight="719.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.PlaceOrderFormController">
+<AnchorPane fx:id="AnchorpaneOrder" prefHeight="838.0" prefWidth="1607.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.PlaceOrderFormController">
    <children>
       <Label layoutX="342.0" layoutY="13.0" text="Place Order Form">
          <font>
@@ -35,7 +35,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <JFXComboBox fx:id="comCustTel" layoutX="141.0" layoutY="176.0" onAction="#comCustTelOnAction" prefHeight="24.0" prefWidth="172.0" />
+      <JFXComboBox fx:id="comCustTel" layoutX="141.0" layoutY="176.0" onAction="#comCustTelOnAction" onKeyReleased="#filterCustomerCon" onMouseClicked="#comCustTelOnMouseClicked" prefHeight="24.0" prefWidth="172.0" />
       <Text layoutX="647.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer ID :" wrappingWidth="103.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -47,7 +47,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <JFXComboBox fx:id="comBatId" layoutX="139.0" layoutY="261.0" onAction="#comBatchIdOnAction" prefHeight="24.0" prefWidth="172.0" />
+      <JFXComboBox fx:id="comBatId" layoutX="139.0" layoutY="261.0" onAction="#comBatchIdOnAction" onKeyReleased="#filterbatId" onMouseClicked="#comBatIdOnMousedClicked" prefHeight="24.0" prefWidth="172.0" />
       <Text layoutX="450.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unit Price :" wrappingWidth="83.72949218749989">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -70,8 +70,8 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtQty" layoutX="863.0" layoutY="268.0" onAction="#txtQtyOnAction" prefHeight="35.0" prefWidth="65.0" />
-      <JFXButton fx:id="btnAddToCart" buttonType="RAISED" layoutX="817.0" layoutY="328.0" onAction="#btnAddToCartOnAction" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: #83c5c1;" text="Add to cart">
+      <TextField fx:id="txtQty" layoutX="863.0" layoutY="268.0" onAction="#txtQtyOnAction" onKeyReleased="#txtQtykeyReleasedOnAction" prefHeight="35.0" prefWidth="65.0" />
+      <JFXButton fx:id="btnAddToCart" buttonType="RAISED" layoutX="817.0" layoutY="339.0" onAction="#btnAddToCartOnAction" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: #83c5c1;" text="Add to cart">
          <graphic>
             <ImageView fitHeight="24.0" fitWidth="84.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -83,7 +83,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <TableView fx:id="tblCart" layoutX="61.0" layoutY="393.0" prefHeight="226.0" prefWidth="898.0">
+      <TableView fx:id="tblCart" layoutX="61.0" layoutY="407.0" prefHeight="285.0" prefWidth="898.0">
         <columns>
           <TableColumn fx:id="colBatId" prefWidth="83.0" text="BAT ID" />
           <TableColumn fx:id="colCusId" prefWidth="89.0" text="CUS ID" />
@@ -94,7 +94,7 @@
             <TableColumn fx:id="colAction" prefWidth="133.0" text="Action" />
         </columns>
       </TableView>
-      <JFXButton fx:id="btnPlaceOrder" buttonType="RAISED" layoutX="829.0" layoutY="648.0" onAction="#btnPlaceOrderOnAction" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: #b39ddb;" text="Place Order">
+      <JFXButton fx:id="btnPlaceOrder" buttonType="RAISED" layoutX="840.0" layoutY="749.0" onAction="#btnPlaceOrderOnAction" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: #b39ddb;" text="Place Order">
          <graphic>
             <ImageView fitHeight="24.0" fitWidth="84.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -106,13 +106,26 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
-      <Text layoutX="55.0" layoutY="669.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Net Total :" wrappingWidth="103.7294921875">
+      <Text layoutX="55.0" layoutY="771.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Net Total :" wrappingWidth="103.7294921875">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Text>
-      <Label fx:id="lblNetTotal" layoutX="172.0" layoutY="655.0" />
+      <Label fx:id="lblNetTotal" layoutX="172.0" layoutY="757.0" />
       <Label fx:id="lblUnitPrice" layoutX="474.0" layoutY="271.0" />
       <TextField fx:id="txtOrdId" layoutX="228.0" layoutY="86.0" />
+      <JFXButton layoutX="334.0" layoutY="154.0" onAction="#btnAddNewCustomerOnAction" prefHeight="24.0" prefWidth="94.0" text="Add" />
+      <Label layoutX="1040.0" layoutY="86.0" text="Resent Order Details :">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tblOrder" layoutX="1048.0" layoutY="132.0" prefHeight="560.0" prefWidth="525.0">
+        <columns>
+          <TableColumn fx:id="colOrderId" prefWidth="158.0" text="ORD ID" />
+          <TableColumn fx:id="colCusId1" prefWidth="147.0" text="CUS ID" />
+            <TableColumn fx:id="colDOP" prefWidth="219.0" text="Date of place" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
