--- a/src/main/resources/view/store_form.fxml
+++ b/src/main/resources/view/store_form.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import java.lang.String?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -24,7 +25,6 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtStoId" layoutX="137.0" layoutY="154.0" onAction="#txtSearchOnAction" onKeyReleased="#txtStoIdOnKeyReleased" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
       <Text layoutX="527.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Capacity" wrappingWidth="64.7294921875">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -36,7 +36,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Text>
-      <TextField fx:id="txtLocation" layoutX="147.0" layoutY="305.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
+      <TextField fx:id="txtLocation" layoutX="147.0" layoutY="305.0" onKeyReleased="#txtLocationKeyReleasedOnAction" prefHeight="33.0" prefWidth="213.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 2px 0px; _fx_text-fill: black;" />
       <JFXButton buttonType="RAISED" layoutX="474.0" layoutY="744.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="97.0" styleClass="jfx-buttonSave" stylesheets="@../css/button.css" text="Save">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -99,5 +99,6 @@
             <String fx:value="table-view" />
          </styleClass>
       </TableView>
+      <ChoiceBox fx:id="choiceStore" layoutX="137.0" layoutY="154.0" prefHeight="33.0" prefWidth="213.0" />
    </children>
 </AnchorPane>
